Fix: Z-Index issue with metadata template dropdown (#537)

--- a/src/components/ContentSidebar/MetadataSidebar.scss
+++ b/src/components/ContentSidebar/MetadataSidebar.scss
@@ -9,6 +9,10 @@
         }
     }
 
+    .metadata-instance-editor-template-dropdown {
+        z-index: 1;
+    }
+
     .metadata-instance-editor-header {
         display: none;
     }
